# AnkiCollab-Website

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md
src/: changelog_manager.rs  cleanser.rs  commit_manager.rs  database.rs  decks.rs  error.rs  gdrive_manager.rs  main.rs  maintainer_manager.rs  media_reference_manager.rs  media_tokens.rs  note_history.rs  note_manager.rs  notetype_manager.rs  notification_manager.rs  optional_tags_manager.rs  stats_manager.rs  storage_manager.rs  structs.rs  suggestion_manager.rs  user.rs
src/templates/: OptionalTags.html  accessibility_statement.html  commit.html  commit_history.html  commits.html  datenschutz.html  decks.html  edit_deck.html  edit_notetype.html  empty_stats.html  error.html  header_template.html  imprint.html  index.html  layout_bottom.html  layout_footer.html  layout_header.html  layout_top.html  login.html  logout.html  maintainers.html  manage_decks.html  media_manager.html  note_history.html  notes.html  optional_tags.html  privacy.html  profile.html  protected_fields.html  review.html  reviews.html  signup.html  statistics.html  subscription_policy.html  terms.html  users.html
src/templates/partials/: commit_notes.html
src/templates/static/: robots.txt
src/templates/static/css/: commit_page.css  commit_styling.css  notes.css  review.css  style.css  style.css.map  subscription_policy.css  templatemo-upright.css  utility.css
src/templates/static/js/: api_service.js  bindiff.js  clipboard.js  commit_history.js  commit_page.js  custom.min.js  decks.js  edit_deck.js  edit_notetype.js  editor_controls.js  field_edit_panel.js  html_diff_utils.js  htmldiff.min.js  image_handling.js  maintainers.js  note_history.js  optional_tags.js  profile.js  review.js  reviews.js  shared_ui.js  statistics.js  subscription_policy.js
src/templates/static/js/dashboard/: dashboard-1.js
src/templates/static/js/plugins-init/: chartjs-init.js  morris-init.js  sparkline.init.js  trumbowyg-init.js
src/templates/static/plugins/flot/js/: jquery.flot.init.js
src/templates/static/plugins/sweetalert/js/: sweetalert.init.js
src/templates/static/plugins/tables/css/datatable/: dataTables.bootstrap4.min.css
src/templates/static/plugins/tables/js/datatable/: dataTables.bootstrap4.min.js
src/templates/static/plugins/validation/: jquery.validate-init.js
src/utils/: mod.rs  server_config.rs
