[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
async-recursion = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tera = "1.20.1"
ammonia = "4.1.2"
bb8-postgres = "0.9.0"
once_cell = "1.21.3"
dotenvy = "0.15.7"
thiserror = "2.0.18"
sentry = { version = "0.47.0", features = ["tracing"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header", "cookie"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["timeout", "trace", "fs"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
tokio = { version = "1.50.0", features = ["full"] }
argon2 = "0.5.3"
time = "0.3.47"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
cookie = "0.18.1"
regex = "1.12.3"
sha2 = "0.10.9"
hmac = "0.12.1"
base64 = "0.22.1"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.125.0", features = ["behavior-version-latest"] }
htmldiff = "0.1.0"
axum-client-ip = "1.3.1"
